--- a/results/report.tex
+++ b/results/report.tex
@@ -1,4 +1,5 @@
 % Options for packages loaded elsewhere
+% Options for packages loaded elsewhere
 \PassOptionsToPackage{unicode}{hyperref}
 \PassOptionsToPackage{hyphens}{url}
 \PassOptionsToPackage{dvipsnames,svgnames,x11names}{xcolor}
@@ -7,21 +8,22 @@
   letterpaper,
   DIV=11,
   numbers=noendperiod]{scrartcl}
-
+\usepackage{xcolor}
 \usepackage{amsmath,amssymb}
+\setcounter{secnumdepth}{-\maxdimen} % remove section numbering
 \usepackage{iftex}
 \ifPDFTeX
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
   \usepackage{textcomp} % provide euro and other symbols
 \else % if luatex or xetex
-  \usepackage{unicode-math}
+  \usepackage{unicode-math} % this also loads fontspec
   \defaultfontfeatures{Scale=MatchLowercase}
   \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
 \fi
 \usepackage{lmodern}
-\ifPDFTeX\else  
-    % xetex/luatex font selection
+\ifPDFTeX\else
+  % xetex/luatex font selection
 \fi
 % Use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
@@ -39,9 +41,6 @@
 }{% if KOMA class
   \KOMAoptions{parskip=half}}
 \makeatother
-\usepackage{xcolor}
-\setlength{\emergencystretch}{3em} % prevent overfull lines
-\setcounter{secnumdepth}{-\maxdimen} % remove section numbering
 % Make \paragraph and \subparagraph free-standing
 \makeatletter
 \ifx\paragraph\undefined\else
@@ -67,8 +66,7 @@
 \makeatother
 
 
-\providecommand{\tightlist}{%
-  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}\usepackage{longtable,booktabs,array}
+\usepackage{longtable,booktabs,array}
 \usepackage{calc} % for calculating minipage widths
 % Correct order of tables after \paragraph or \subparagraph
 \usepackage{etoolbox}
@@ -80,17 +78,33 @@
 \makesavenoteenv{longtable}
 \usepackage{graphicx}
 \makeatletter
-\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
-\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
-\makeatother
-% Scale images if necessary, so that they will not overflow the page
-% margins by default, and it is still possible to overwrite the defaults
-% using explicit options in \includegraphics[width, height, ...]{}
-\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
+\newsavebox\pandoc@box
+\newcommand*\pandocbounded[1]{% scales image to fit in text height/width
+  \sbox\pandoc@box{#1}%
+  \Gscale@div\@tempa{\textheight}{\dimexpr\ht\pandoc@box+\dp\pandoc@box\relax}%
+  \Gscale@div\@tempb{\linewidth}{\wd\pandoc@box}%
+  \ifdim\@tempb\p@<\@tempa\p@\let\@tempa\@tempb\fi% select the smaller of both
+  \ifdim\@tempa\p@<\p@\scalebox{\@tempa}{\usebox\pandoc@box}%
+  \else\usebox{\pandoc@box}%
+  \fi%
+}
 % Set default figure placement to htbp
-\makeatletter
 \def\fps@figure{htbp}
 \makeatother
+
+
+
+
+
+\setlength{\emergencystretch}{3em} % prevent overfull lines
+
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+
+
+
+ 
+
 
 \KOMAoption{captions}{tableheading}
 \makeatletter
@@ -134,14 +148,9 @@
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
-
-\ifLuaTeX
-  \usepackage{selnolig}  % disable illegal ligatures
-\fi
 \usepackage{bookmark}
-
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
-\urlstyle{same} % disable monospaced font for URLs
+\urlstyle{same}
 \hypersetup{
   pdftitle={Biomarkers of ASD},
   pdfauthor={Lucas Childs, Minu Pabbathi, Nathan Kim, Bahaar Ahuja, Anna Liang},
@@ -157,7 +166,6 @@
 \author{Lucas Childs, Minu Pabbathi, Nathan Kim, Bahaar Ahuja, Anna
 Liang}
 \date{2025-11-06}
-
 \begin{document}
 \maketitle
 
@@ -232,6 +240,10 @@ proteins were IgD, suPAR, MAPK14, EPHB2, DERM, ROR1, GI24, elF-4H, and
 ARSB. After all nine were combined, the AUC of the classifier was
 approximately 0.860.
 
+Below is a flowchart of this process.
+
+\includegraphics[width=5.20833in,height=\textheight,keepaspectratio]{images/flowchart.png}\hfill
+
 \subsection{Findings}\label{findings}
 
 \subsubsection{Impact of preprocessing and
@@ -255,7 +267,7 @@ confirmed with histograms and a QQ Plot).
 
 \begin{figure}[H]
 
-{\centering \includegraphics[width=0.5\textwidth,height=\textheight]{../images/Q1Comparison.png}
+{\centering \includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{../images/Q1Comparison.png}
 
 }
 
@@ -277,7 +289,7 @@ considered outliers if they had \(\geq 30\) outlier proteins. This
 flagged 13 outlier subjects, as listed below.
 
 \begin{center}
-\includegraphics[width=1.35417in,height=\textheight]{images/q2top13-02.png}
+\includegraphics[width=1.19792in,height=\textheight,keepaspectratio]{images/q2top13-02.png}
 \end{center}
 
 The frequency of these outlier subjects are
@@ -288,7 +300,7 @@ We then compared the number of outlier proteins for subjects across both
 groups.
 
 \begin{center}
-\includegraphics[width=5.20833in,height=\textheight]{images/q2boxplot-03.png}
+\includegraphics[width=4.6875in,height=\textheight,keepaspectratio]{images/q2boxplot-03.png}
 \end{center}
 
 From the visual, it seems like the TD group has more subjects w/ higher
@@ -302,7 +314,7 @@ statistically significant difference in this frequency of outlier
 subjects between both groups.
 
 \begin{center}
-\includegraphics[width=1.5625in,height=\textheight]{images/q2proptest-01.png}
+\includegraphics[width=1.5625in,height=\textheight,keepaspectratio]{images/q2proptest-01.png}
 \end{center}
 
 Since the p value of 0.2668 is greater than alpha = 0.05, we conclude
@@ -396,15 +408,15 @@ metric: `accuracy'. The metrics are depicted below:
 This panel prioritized reducing false positives and resulted in a
 notable performance trade-off:
 
-comparison\_data \textless- data.frame( Metric = c(``Accuracy'',
-``Sensitivity'', ``Specificity'', ``AUROC''), InClassIntersection =
-c(0.774, 0.812, 0.733, 0.883), PureLASSO = c(0.767, 0.750, 0.933,
-0.858), ChangeVsBaseline = c(``\(\\approx 1\\%\) decrease'',
-``\(7.6\\%\) decrease'', ``\(27.3\\%\) increase'', ``\(\\approx 2.8\\%\)
-decrease''), KeyInsight = c(``Comparable overall accuracy.'', ``Reduced
-ability to correctly identify ASD cases.'', ``Vastly improved
-performance in ruling out controls.'', ``Lower overall discrimination
-ability.'') )
+```\{r\} comparison\_data \textless- data.frame( Metric =
+c(``Accuracy'', ``Sensitivity'', ``Specificity'', ``AUROC''),
+InClassIntersection = c(0.774, 0.812, 0.733, 0.883), PureLASSO =
+c(0.767, 0.750, 0.933, 0.858), ChangeVsBaseline = c(``\(\\approx 1\\%\)
+decrease'', ``\(7.6\\%\) decrease'', ``\(27.3\\%\) increase'',
+``\(\\approx 2.8\\%\) decrease''), KeyInsight = c(``Comparable overall
+accuracy.'', ``Reduced ability to correctly identify ASD cases.'',
+``Vastly improved performance in ruling out controls.'', ``Lower overall
+discrimination ability.'') )
 
 \section{Render the table using kable with appropriate
 formatting}\label{render-the-table-using-kable-with-appropriate-formatting}
@@ -436,7 +448,7 @@ CD27 - CNDP1 - IL-17 RC - SRCN1 - Epo - GDNF - 14-3-3 protein zeta/delta
 
 \begin{figure}[H]
 
-{\centering \includegraphics[width=0.5\textwidth,height=\textheight]{../images/Q4PureLasso.png}
+{\centering \includegraphics[width=0.5\linewidth,height=\textheight,keepaspectratio]{../images/Q4PureLasso.png}
 
 }
 
